<resources>
    <string name="app_name">ACTiVSewa</string>
    <string name="version">Version 1.2</string>
    <string name="exit">Tekan kembali sekali lagi untuk keluar</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="subtitle_masuk">Masuk akun sewa konferensi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="nama">Nama</string>
    <string name="telepon">Telepon</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="masuk_akun">Masuk akun</string>
    <string name="btn_lupa_password">Lupa Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_dashboard_sales">Dashboard Sales</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profil</string>
    <string name="filing">Pengajuan</string>
    <string name="transaction">Transaksi</string>
    <string name="selamat_datang_kembali">Selamat datang kembali!</string>
    <string name="halo_nabil">Halo Nabil</string>
    <string name="tidak_ada_perangkat_disewakan">Tidak ada perangkat disewakan</string>
    <string name="perangkat_sewa">Perangkat Sewa</string>
    <string name="tidak_ada_transaksi">Tidak ada transaksi</string>
    <string name="product">Product</string>
    <string name="produk_tidak_tersedia">Produk tidak tersedia</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus condimentum nulla diam proin quis commodo malesuada. Dolor morbi egestas consectetur egestas aliquam tellus. Accumsan tristique consequat nec cras commodo et orci ipsum, convallis. Lectus nibh ut eget quis quis praesent pellentesque. Molestie a id potenti vivamus blandit aliquet iaculis sed. Amet ut rutrum mauris gravida pellentesque eget in in potenti.</string>
    <string name="tambah_sewa">Tambah Sewa</string>
    <string name="detail_product">Detail produk</string>
    <string name="trash">Trash</string>
    <string name="detail_data_penyewa">Detail Data Penyewa</string>
    <string name="lihat_data">Lihat data</string>
    <string name="disetujui">Disetujui</string>
    <string name="cetak_tagihan">Cetak Tagihan</string>
    <string name="lunas">Lunas</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="link_url">Link Url</string>
    <string name="url_pembayaran">URL Pembayaran</string>
    <string name="tanggal_mulai_sewa">Tanggal Mulai Sewa</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="status_verifikasi">Status Verifikasi</string>
    <string name="_20_aug_2022">20 Aug 2022</string>
    <string name="hubungi_sales">Hubungi Sales</string>
    <string name="upload_nik">Upload NIK</string>
    <string name="nik">NIK</string>
    <string name="upload_npwp">Upload NPWP</string>
    <string name="npwp">NPWP</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="detail_dan_pembayaran">Detail dan Pembayaran</string>
    <string name="pilih_metode_pembayaran">Pilih metode pembayaran</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="keluar">Keluar</string>
    <string name="pengajuan_tidak_tersedia">Pengajuan Tidak tersedia</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="title_activity_dashboard_sales">DashboardSalesActivity</string>
    <string name="title_activity_dsahboard_admin_sales">DsahboardAdminSalesActivity</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="pilih_file">Pilih File</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="durasi">Durasi</string>
    <string name="tag">Tag</string>
    <string name="stok">Stok</string>
    <string name="harga">Harga</string>
    <string name="brand">Brand</string>
</resources>