<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/accentPrimary"
    tools:context=".ui.auth.daftar.DaftarFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/accentPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitle="Buat akun sewa konferensi"
        app:subtitleTextAppearance="@style/TextView.PoppinsNormal18sp"
        app:subtitleTextColor="@color/colorSecondary"
        app:title="Buat Akun Baru"
        app:titleTextAppearance="@style/TextView.PoppinsBoldD24sp"
        app:titleTextColor="@color/darkPrimary" />
    <TextView
        android:id="@+id/txtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textColor="@color/darkPrimary"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/editNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_rectangle_input"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/darkPrimary"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_rectangle_input"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtTelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telepon"
        android:textColor="@color/darkPrimary"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/editTelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_rectangle_input"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/darkPrimary"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:inputType="textPassword"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_rectangle_input"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buat_akun_baru"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:background="@drawable/shape_rectangle_button_primary"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnLupaPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:textColor="@color/darkPrimary"
            android:text="@string/lupa_password"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/btnMasuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/darkPrimary"
            android:text="@string/masuk_akun"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>