<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.masuk.MasukFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgmasuk"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/txtSelamatDatang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/selamat_datang"
                android:textColor="@color/darkPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subtitleSelamatDatang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSelamatDatang"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins"
                android:text="@string/subtitle_masuk"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitleSelamatDatang"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/email"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEmail"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_rectangle_input"
                android:padding="10dp" />

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/password"
                android:textColor="@color/darkPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPassword"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_rectangle_input"
                android:padding="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMasuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_rectangle_button_primary"
                android:backgroundTint="@color/primary"
                android:text="@string/masuk"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/btnMasuk"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnLupaPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/lupa_password"
                    android:textColor="@color/darkPrimary"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/btnDaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="right"
                    android:text="@string/buat_akun_baru"
                    android:textColor="@color/darkPrimary"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>